--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>JiaQi Liang (Jacky)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="is-preload">
 
@@ -28,7 +23,7 @@
 								<span>Hello, I'm</span>
 								<h1>JiaQi Liang</h1>
 								<p>Front End Developer | Web Designer</p>
-								<a href="#contact">Contact Me</a>
+								<a href="#contact" class="contact_btn">Contact Me</a>
 							</div>
 						</div>
 						<nav>
@@ -55,7 +50,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Experience and description:</h2>
+								<h2 class="major">Experience and description</h2>
 								<span class="image main"><img src="images/wireframe.jpg" alt="" /></span>
 								<div class="exp">
 									<b>Junior Web Developer - MaginX Inc.</b>
@@ -131,7 +126,10 @@
 							</article>
 						<!-- resume -->
 						<article id="resume">
-							
+							<h2 class="major">Resume</h2>
+							<span class="image main"><img src="images/friend.jpg" alt="" /></span>
+							<a class="contact_btn" target="_blank" href="https://drive.google.com/file/d/1XV3t_RLEydsKT8KTP_VawT_HOYAhA72D/view?usp=sharing">View/download</a>
+							<span style="display: block; text-align: center; font-size: 0.8rem">From Google Drive</span>
 						</article>
 						<!-- Elements -->
 							<article id="elements">
