update content and fix conflict

--- a/blocks/about.html
+++ b/blocks/about.html
@@ -1,3 +1,32 @@
 <h2 class="major">Skills</h2>
 	<span class="image main"><img src="images/oldkeyboard.jpg" alt="" /></span>
-	<p>Bootstrap, HTML, PHTML, XML, JavaScript (jQuery, Vue), CSS (SASS, LESS), PHP, JSON, GraphQL, Adobe Photoshop, Adobe Illustrator, Adobe InDesign, Microsoft Office.</p>
+	<b>Coding</b>
+	<ul>
+		<li>Bootstrap</li>
+		<li>HTML</li>
+		<li>PHTML</li>
+		<li>XML</li>
+		<li>JavaScript (jQuery, Vue)</li>
+		<li>CSS (SASS, LESS)</li>
+		<li>PHP</li>
+		<li>JSON</li>
+		<li>GraphQL</li>
+	</ul>
+	<b>Design</b>
+	<ul>
+		<li>Adobe Photoshop</li>
+		<li>Adobe Illustrator</li>
+		<li>Adobe InDesign</li>
+	</ul>
+	<b>Languages</b>
+	<ul>
+		<li>English</li>
+		<li>Chinese (Cantonest & Mandarin)</li>
+	</ul>
+	<b>Other</b>
+	<ul>
+		<li>Microsoft Word</li>
+		<li>Microsoft PowerPoint</li>
+		<li>Microsoft Excel</li>
+		<li>Microsoft OutLook</li>
+	</ul>
