--- a/blocks/work.html
+++ b/blocks/work.html
@@ -31,6 +31,9 @@
 			<li>Livolo (www.livolo.com)</li>
 			<li>MyBat Pro (www.mybatpro.com)</li>
 			<li>ShopMoxa (shopmoxa.neteon.net)</li>
-
+			<li>Neteon (neteon.net)</li>
+			<li>MaginX (maginx.com)</li>
+			<li>ML and CHEN, P.C. (mchenlaw.com)</li>
+			<li>MybatPro (www.mybatpro.com)</li>
 		</ol>
 	</div>
