--- a/blocks/global/header.html
+++ b/blocks/global/header.html
@@ -13,7 +13,7 @@
 <nav>
 	<ul>
 		<li><a href="#intro">Intro</a></li>
-		<li><a href="#work">Work</a></li>
+		<li><a href="#work">Works</a></li>
 		<li><a href="#skills">Skills</a></li>
 		<li><a href="#resume">Resume</a></li>
 
