--- a/blocks/about.html
+++ b/blocks/about.html
@@ -21,7 +21,7 @@
 	<b>Languages</b>
 	<ul>
 		<li>English</li>
-		<li>Chinese (Cantonest & Mandarin)</li>
+		<li>Chinese (Cantonese & Mandarin)</li>
 	</ul>
 	<b>Other</b>
 	<ul>
