--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 		
 	</head>
 	<body class="is-preload">
-
+	<!-- preload loader -->
+	<div class="preload-precesing">
+		<img src="images/loader.gif" alt="">
+	</div>
+	
 	<!-- Wrapper -->
 	<div id="wrapper">
 		<!-- header -->
