--- a/blocks/about.html
+++ b/blocks/about.html
@@ -12,11 +12,19 @@
 		<li>JSON</li>
 		<li>GraphQL</li>
 	</ul>
+	<b>Platforms</b>
+	<ul>
+		<li>Magento 2</li>
+		<li>BigCommerce</li>
+		<li>Shopify</li>
+		<li>WordPress</li>
+	</ul>
 	<b>Design</b>
 	<ul>
 		<li>Adobe Photoshop</li>
 		<li>Adobe Illustrator</li>
 		<li>Adobe InDesign</li>
+		<li>Knowledge of UI/UX Design</li>
 	</ul>
 	<b>Languages</b>
 	<ul>
