--- a/blocks/work.html
+++ b/blocks/work.html
@@ -8,6 +8,7 @@
 			<li>Create various multiple styles in CSS (SASS and LESS)</li>
 			<li>Applied media queries to create responsive website across difference size of screens.</li>
 			<li>Involved finding out bugs, broken links, missing images, and lossless compress images as customer provided etc.</li>
+			<li>Create CMS content.</li>
 			<li>Maintained website content up to date.</li>
 			<li>Involved in using GIT, for project management and version management.</li>
 			<li>Used JavaScript to update a portion of a web page thus reducing bandwidth usage and load time in web pages to get user input and requests.</li>
