--- a/blocks/work.html
+++ b/blocks/work.html
@@ -1,7 +1,7 @@
 	<h2 class="major">Experience and description</h2>
 	<span class="image main"><img src="images/wireframe.jpg" alt="" /></span>
 	<div class="exp">
-		<b>Junior Web Developer - MaginX Inc.</b>
+		<b>Front End Web Developer - MaginX Inc.</b>
 		<ul>
 			<li>Design and developed dynamic and SEO friendly web page using HTML, CSS, and JavaScript.</li>
 			<li>Worked on CSS background, CSS positioning, CSS text, CSS border, pseudo classes and pseudo-elements.</li>
